@@ -12,9 +12,14 @@
       <description>Update window set keep above</description>
     </key>
     <key name="preferences-recent-page" type="i">
-      <default>0</default>
+      <default>1</default>
       <summary>Recent opend preferences page number</summary>
       <description>Recent opend preferences page number</description>
+    </key>
+    <key name="recent-account" type="i">
+      <default>0</default>
+      <summary>Recent used account number</summary>
+      <description>Recent used account number</description>
     </key>
     <child name="view" schema="com.googlecode.gfeedline.view"/>
     <child name="geometry" schema="com.googlecode.gfeedline.geometry"/>
